<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/dimen_8_dp"
    android:paddingTop="@dimen/dimen_8_dp"
    android:paddingRight="@dimen/dimen_8_dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:padding="@dimen/dimen_12_dp"
        android:background="@drawable/card_bg_light"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:paddingTop="@dimen/dimen_8_dp"
            android:paddingBottom="@dimen/dimen_8_dp"
            android:text="@string/others"
            android:textSize="@dimen/font_size_normal_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:id="@+id/favorite"
            android:layout_marginTop="@dimen/dimen_8_dp"
            android:background="@drawable/settings_item_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48_dp">
            <ImageView
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:id="@+id/feature_enable_img"
                android:src="@drawable/ic_favorite"
                android:tint="#ff0011"
                android:layout_width="@dimen/dimen_24_dp"
                android:layout_height="@dimen/dimen_24_dp" />
            <TextView
                android:gravity="center"
                android:text="@string/praise"
                android:textSize="@dimen/font_size_normal_15dp"
                android:layout_marginLeft="@dimen/dimen_10_dp"
                android:layout_marginStart="@dimen/dimen_10_dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/feature_enable_img"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/about_me"
            android:layout_marginTop="8dp"
            android:background="@drawable/settings_item_bg"
            android:layout_width="match_parent"
            android:layout_height="48dp">
            <ImageView
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:id="@+id/feature_notify_img"
                android:src="@drawable/ic_about_me"
                android:tint="#ff0059"
                android:layout_width="@dimen/dimen_24_dp"
                android:layout_height="@dimen/dimen_24_dp"/>
            <TextView
                android:gravity="center"
                android:text="@string/about_me"
                android:textSize="@dimen/font_size_normal_15dp"
                android:layout_marginLeft="@dimen/dimen_10_dp"
                android:layout_marginStart="@dimen/dimen_10_dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/feature_notify_img"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>