<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/card_bg_light"
    android:layout_margin="@dimen/dimen_8_dp"
    android:padding="@dimen/dimen_8_dp">
    <TextView
        android:paddingTop="@dimen/dimen_8_dp"
        android:paddingBottom="@dimen/dimen_8_dp"
        android:text="@string/general_feature_settings"
        android:textColor="@color/color_gray_light"
        android:layout_width="match_parent"
        android:textSize="@dimen/font_size_normal_16dp"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/rl_enhance_notification_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48_dp">

        <ImageView
            android:id="@+id/enhance_notification_img"
            android:layout_width="@dimen/dimen_24_dp"
            android:layout_height="@dimen/dimen_24_dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:tint="#ff8083"
            android:src="@drawable/ic_enhance_notification" />

        <TextView
            android:layout_toRightOf="@id/enhance_notification_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_10_dp"
            android:layout_marginStart="@dimen/dimen_10_dp"
            android:gravity="center"
            android:textColor="@color/color_gray_light"
            android:text="@string/enhance_notification"
            android:textSize="@dimen/font_size_normal_15dp" />

        <Switch
            android:id="@+id/sw_enhance_notification_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_full_screen_enable_layout"
        android:layout_width="match_parent"
        android:layout_weight="0"
        android:layout_height="@dimen/dimen_48_dp">
        <ImageView
            android:id="@+id/full_screen_img"
            android:layout_width="@dimen/dimen_24_dp"
            android:layout_height="@dimen/dimen_24_dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:tint="#ffa200"
            android:src="@drawable/ic_full_screen" />
        <TextView
            android:layout_toRightOf="@id/full_screen_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_10_dp"
            android:layout_marginStart="@dimen/dimen_10_dp"
            android:gravity="center"
            android:text="如果无法覆盖状态栏，请打开开关"
            android:textColor="@color/color_gray_light"
            android:textSize="@dimen/font_size_normal_15dp"/>
        <Switch
            android:id="@+id/sw_full_screen_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_apps_manager_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48_dp"
        android:layout_marginTop="@dimen/dimen_8_dp">

        <ImageView
            android:id="@+id/apps_manager_img"
            android:layout_width="@dimen/dimen_24_dp"
            android:layout_height="@dimen/dimen_24_dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/dimen_2_dp"
            android:src="@drawable/ic_apps"
            android:tint="#ff00fb" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/apps_manager_img"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/color_gray_light"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen_10_dp"
                android:layout_marginStart="@dimen/dimen_10_dp"
                android:gravity="center"
                android:text="@string/notification_apps_manager"
                android:textSize="@dimen/font_size_normal_15dp" />

            <TextView
                android:textColor="@color/color_gray_light"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen_10_dp"
                android:layout_marginStart="@dimen/dimen_10_dp"
                android:gravity="center"
                android:text="@string/notification_apps_manager_summary"
                android:textSize="@dimen/font_size_small_12dp" />
        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/dimen_18_dp"
            android:layout_height="@dimen/dimen_18_dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_forward"
            android:tint="@color/color_gray_light" />
    </RelativeLayout>

</LinearLayout>