<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/dimen_8_dp"
    android:paddingTop="@dimen/dimen_8_dp"
    android:paddingRight="@dimen/dimen_8_dp"
    android:layout_height="match_parent">
    <LinearLayout
        android:padding="@dimen/dimen_12_dp"
        android:background="@drawable/card_bg_light"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:paddingTop="@dimen/dimen_8_dp"
            android:paddingBottom="@dimen/dimen_8_dp"
            android:text="@string/custom_settings"
            android:layout_width="match_parent"
            android:textSize="@dimen/font_size_normal_16dp"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:id="@+id/change_color_layout"
            android:layout_marginTop="@dimen/dimen_8_dp"
            android:background="@drawable/settings_item_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48_dp">
            <ImageView
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:id="@+id/change_color_img"
                android:src="@drawable/ic_change_color"
                android:tint="@color/colorAccent"
                android:layout_width="@dimen/dimen_24_dp"
                android:layout_height="@dimen/dimen_24_dp" />
            <TextView
                android:gravity="center"
                android:text="@string/corner_color"
                android:layout_marginLeft="@dimen/dimen_10_dp"
                android:layout_marginStart="@dimen/dimen_10_dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/font_size_normal_15dp"
                android:layout_toRightOf="@id/change_color_img"/>
            <ImageView
                android:id="@+id/iv_current_color"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_color_selected"
                android:layout_width="@dimen/dimen_24_dp"
                android:layout_height="@dimen/dimen_24_dp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_marginTop="@dimen/dimen_16_dp"
            android:background="@drawable/settings_item_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_72_dp"
            android:layout_marginBottom="@dimen/dimen_8_dp">
            <RelativeLayout
                android:id="@+id/change_number_layout"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_alignParentLeft="true"
                    android:id="@+id/change_number_img"
                    android:src="@drawable/ic_change_number"
                    android:tint="#ff9d00"
                    android:layout_width="@dimen/dimen_24_dp"
                    android:layout_height="@dimen/dimen_24_dp"/>
                <TextView
                    android:gravity="center"
                    android:text="@string/corner_location"
                    android:layout_marginLeft="@dimen/dimen_10_dp"
                    android:layout_marginStart="@dimen/dimen_10_dp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_24_dp"
                    android:textSize="@dimen/font_size_normal_15dp"
                    android:layout_toRightOf="@id/change_number_img"/>
                <ImageView
                    android:visibility="gone"
                    android:layout_alignParentRight="true"
                    android:id="@+id/corners_number_img"
                    android:src="@drawable/ic_change_number"
                    android:layout_width="@dimen/dimen_24_dp"
                    android:layout_height="@dimen/dimen_24_dp" />
                <LinearLayout
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_48_dp">
                    <ImageView
                        android:paddingTop="24dp"
                        android:background="@drawable/settings_item_bg"
                        android:layout_alignParentLeft="true"
                        android:id="@+id/iv_corner_left_top"
                        android:src="@drawable/ic_corner_left_top"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                    <ImageView
                        android:paddingTop="@dimen/dimen_24_dp"
                        android:background="@drawable/settings_item_bg"
                        android:layout_alignParentLeft="true"
                        android:id="@+id/iv_corner_right_top"
                        android:src="@drawable/ic_corner_right_top"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                    <ImageView
                        android:paddingTop="@dimen/dimen_24_dp"
                        android:background="@drawable/settings_item_bg"
                        android:layout_alignParentLeft="true"
                        android:id="@+id/iv_corner_left_bottom"
                        android:src="@drawable/ic_corner_left_bottom"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                    <ImageView
                        android:paddingTop="@dimen/dimen_24_dp"
                        android:background="@drawable/settings_item_bg"
                        android:layout_alignParentLeft="true"
                        android:id="@+id/iv_corner_right_bottom"
                        android:src="@drawable/ic_corner_right_bottom"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="16dp"
            android:background="@drawable/settings_item_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_64_dp">
            <RelativeLayout
                android:id="@+id/change_radius_layout"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_alignParentLeft="true"
                    android:id="@+id/change_radius_img"
                    android:src="@drawable/ic_change_radius"
                    android:tint="#cc00ff"
                    android:layout_width="@dimen/dimen_24_dp"
                    android:layout_height="@dimen/dimen_24_dp"/>
                <TextView
                    android:gravity="center"
                    android:text="@string/corner_size"
                    android:layout_marginLeft="@dimen/dimen_10_dp"
                    android:layout_marginStart="@dimen/dimen_10_dp"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/font_size_normal_15dp"
                    android:layout_height="@dimen/dimen_24_dp"
                    android:layout_toRightOf="@id/change_radius_img"/>
                <TextView
                    android:id="@+id/tv_corner_size"
                    android:text="12"
                    android:gravity="center"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_24_dp" />
                <SeekBar
                    android:id="@+id/sb_change_corner_size"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="@dimen/dimen_16_dp"
            android:background="@drawable/settings_item_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_64_dp">
            <RelativeLayout
                android:id="@+id/change_opacity_layout"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_alignParentLeft="true"
                    android:id="@+id/change_opacity_img"
                    android:src="@drawable/ic_change_opacity"
                    android:tint="#0090ff"
                    android:layout_width="@dimen/dimen_24_dp"
                    android:layout_height="@dimen/dimen_24_dp"/>
                <TextView
                    android:textSize="@dimen/font_size_normal_15dp"
                    android:gravity="center"
                    android:text="@string/corner_opacity"
                    android:layout_marginLeft="@dimen/dimen_10_dp"
                    android:layout_marginStart="@dimen/dimen_10_dp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_24_dp"
                    android:layout_toRightOf="@id/change_opacity_img"/>
                <TextView
                    android:text="12"
                    android:id="@+id/tv_opacity"
                    android:gravity="center"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_24_dp" />
                <SeekBar
                    android:id="@+id/sb_change_opacity"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>